<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/textView4"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="32dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:text="@string/push_setup_title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <CheckBox
        android:id="@+id/enable_push"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/enable_push"
        app:layout_constraintStart_toStartOf="@+id/textView4"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />

    <CheckBox
        android:id="@+id/enable_silent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/set_silent_time"
        app:layout_constraintStart_toStartOf="@+id/enable_push"
        app:layout_constraintTop_toBottomOf="@+id/enable_push" />

    <Spinner
        android:id="@+id/from_hour"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:entries="@array/hours"
        app:layout_constraintBottom_toBottomOf="@+id/enable_silent"
        app:layout_constraintStart_toEndOf="@+id/enable_silent"
        app:layout_constraintTop_toTopOf="@+id/enable_silent"
        tools:listitem="@layout/support_simple_spinner_dropdown_item" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/time_sep"
        app:layout_constraintBottom_toBottomOf="@+id/from_hour"
        app:layout_constraintStart_toEndOf="@+id/from_hour"
        app:layout_constraintTop_toTopOf="@+id/from_hour" />

    <Spinner
        android:id="@+id/from_minute"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:entries="@array/minutes"
        app:layout_constraintBottom_toBottomOf="@+id/from_hour"
        app:layout_constraintStart_toEndOf="@+id/from_hour"
        app:layout_constraintTop_toTopOf="@+id/from_hour"
        tools:listitem="@layout/support_simple_spinner_dropdown_item" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/time_to"
        app:layout_constraintEnd_toEndOf="@+id/from_minute"
        app:layout_constraintStart_toStartOf="@+id/from_hour"
        app:layout_constraintTop_toBottomOf="@+id/from_hour" />

    <Spinner
        android:id="@+id/to_hour"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:entries="@array/hours"
        app:layout_constraintStart_toStartOf="@+id/from_hour"
        app:layout_constraintTop_toBottomOf="@+id/textView8"
        tools:listitem="@layout/support_simple_spinner_dropdown_item" />

    <TextView
        android:id="@+id/textView11"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/time_sep"
        app:layout_constraintBottom_toBottomOf="@+id/to_hour"
        app:layout_constraintStart_toEndOf="@+id/to_hour"
        app:layout_constraintTop_toTopOf="@+id/to_hour" />

    <Spinner
        android:id="@+id/to_minute"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:entries="@array/minutes"
        app:layout_constraintBottom_toBottomOf="@+id/to_hour"
        app:layout_constraintStart_toEndOf="@+id/to_hour"
        app:layout_constraintTop_toTopOf="@+id/to_hour"
        tools:listitem="@layout/support_simple_spinner_dropdown_item" />

    <TextView
        android:id="@+id/textView12"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/tag_title"
        android:textAppearance="@style/TextAppearance.AppCompat.Button"
        app:layout_constraintStart_toStartOf="@+id/enable_silent"
        app:layout_constraintTop_toBottomOf="@+id/to_hour" />

    <ListView
        android:id="@+id/tag_list"
        android:layout_width="0dp"
        android:layout_height="150dp"
        android:layout_marginEnd="32dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="8dp"
        android:choiceMode="singleChoice"
        android:background="@drawable/boder_background"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView12" />

    <Button
        android:id="@+id/add_tag_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/add_tag"
        app:layout_constraintEnd_toStartOf="@+id/remove_tag_button"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tag_list" />

    <Button
        android:id="@+id/remove_tag_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/remove_tag"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/add_tag_button"
        app:layout_constraintTop_toTopOf="@+id/add_tag_button" />
</android.support.constraint.ConstraintLayout>